kustomize/overlays/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: person-service
spec:
  replicas: 1
  template:
    spec:
      containers:
      - image: image-registry.openshift-image-registry.svc:5000/book-dev/person-service:latest
        imagePullPolicy: Always
        name: person-service
        ports:
          - containerPort: 8080
            protocol: TCP
