kustomize/overlays/dev/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: person-service
spec:
  port:
    targetPort: 8080-tcp
  to:
    kind: Service
    name: dev-person-service
    weight: 100
  wildcardPolicy: None
